# obsidian-mcp-boilerplate

./: .gitignore  BOILERPLATE_SUMMARY.md  CLAUDE.md  README.md  SETUP.md  main.py  pyproject.toml
llm_ctx/: fastmcp_reference.md
src/obsidian_mcp/: __init__.py  config.py  server.py
src/obsidian_mcp/prompts/: __init__.py  custom.py
src/obsidian_mcp/tools/: __init__.py  custom.py  navigation.py  time.py
