[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-mcp-boilerplate"
version = "0.1.0"
description = "Reusable FastMCP server boilerplate for Obsidian vault integration"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "anyio>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true